// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paginator className should support className 1`] = `
<div
  className="my-classname"
>
  <div
    className="pagination-infos pagination-infos-md"
  >
    181-200 / 300
  </div>
  <ul
    className="pagination pagination-md"
  >
    <li
      className=""
    >
      <a
        aria-label="First"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Previous"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className="active"
    >
      <a
        aria-label="10"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          10
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="11"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          11
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="12"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          12
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Next"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Last"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Paginator condensed should display a condensed version of paginator 1`] = `
<div
  className={undefined}
>
  <ul
    className="pagination pagination-md"
  >
    <li
      className=""
    >
      <a
        aria-label="Previous"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Next"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Paginator labels should be possible to specify custom labels 1`] = `
<div
  className={undefined}
>
  <ul
    className="pagination pagination-md"
  >
    <li
      className="disabled"
    >
      <a
        aria-label="Premier"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          &lt;&lt;
        </span>
      </a>
    </li>
    <li
      className="disabled"
    >
      <a
        aria-label="Précédent"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          &lt;
        </span>
      </a>
    </li>
    <li
      className="active"
    >
      <a
        aria-label="1"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          1
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="2"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          2
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="3"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          3
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="..."
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Suivant"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          &gt;
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Dernier"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          &gt;&gt;
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Paginator showInfos should display informations 1`] = `
<div
  className={undefined}
>
  <div
    className="pagination-infos pagination-infos-lg"
  >
    181-200 / 300
  </div>
  <ul
    className="pagination pagination-lg"
  >
    <li
      className=""
    >
      <a
        aria-label="First"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Previous"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className="active"
    >
      <a
        aria-label="10"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          10
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="11"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          11
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="12"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          12
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Next"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Last"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Paginator size should be medium by default 1`] = `
<div
  className={undefined}
>
  <ul
    className="pagination pagination-md"
  >
    <li
      className=""
    >
      <a
        aria-label="First"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Previous"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className="active"
    >
      <a
        aria-label="10"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          10
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="11"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          11
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="12"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          12
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Next"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Last"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Paginator size should work with large 1`] = `
<div
  className={undefined}
>
  <ul
    className="pagination pagination-lg"
  >
    <li
      className=""
    >
      <a
        aria-label="First"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Previous"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className="active"
    >
      <a
        aria-label="10"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          10
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="11"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          11
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="12"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          12
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Next"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Last"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Paginator size should work with small 1`] = `
<div
  className={undefined}
>
  <ul
    className="pagination pagination-sm"
  >
    <li
      className=""
    >
      <a
        aria-label="First"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          «
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Previous"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ‹
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className="active"
    >
      <a
        aria-label="10"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          10
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="11"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          11
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="12"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          12
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="…"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          …
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Next"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          ›
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        aria-label="Last"
        href="#"
        onClick={[Function]}
      >
        <span
          aria-hidden="true"
        >
          »
        </span>
      </a>
    </li>
  </ul>
</div>
`;
